tests/build/fail/widget/malformed_property_type2.stderr
error: type placeholder `_` is not allowed in property types
 --> $DIR/malformed_property_type2.rs:8:15
  |
8 |         foo { _ } = 10;
  |               ^

error: property `foo` is not inherited nor declared by the widget
  --> $DIR/malformed_property_type2.rs:11:18
   |
11 |     fn new_child(foo: bool) -> NilUiNode {
   |                  ^^^
